# Kalorien-Tracker

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  test.txt
app/: database.py  main.py  security.py  terminal.py
app/models/: food.py  meal.py  profile.py  user.py
app/routers/: auth.py  food.py  meal.py  profile.py  user.py
app/schemas/: food.py  meal.py  profile.py  user.py
app/services/: auth.py  food.py  meal.py  profile.py  user.py
app/tests/: conftest.py  test_auth.py  test_foods.py  test_main.py  test_meals.py  test_profiles.py  test_users.py
