[project]
name = "kalorien-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.136.3",
    "httpx>=0.28.1",
    "pyjwt>=2.13.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

[tool.coverage.run]
omit = [
    "app/terminal.py"
]
